k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindmend-backend-service
  namespace: mindmend
  annotations:
    cloud.google.com/backend-config: '{"default":"mindmend-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: mindmend-backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
